[package]
name = "hachimi_ura_plugin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hachimi_plugin_sdk = { git = "https://github.com/Hachimi-Hachimi/hachimi_plugin_sdk_rs.git", features = ["il2cpp"] }
once_cell = "1.19"
ureq = { version = "2.10", features = ["json"] }
log = "0.4"
arc-swap = "1.7"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.56"
features = [
    "Win32_System_LibraryLoader"
]